--- a/app/src/main/res/layout/activity_info_pressure.xml
+++ b/app/src/main/res/layout/activity_info_pressure.xml
@@ -26,64 +26,76 @@
             android:layout_width="315dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:textStyle="bold"
             android:text="@string/name"
-            android:textColor="@color/textColor" />
+            android:textAlignment="center"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
     <LinearLayout
-
-        android:layout_width="386dp"
-        android:layout_height="wrap_content"
+        android:layout_width="393dp"
+        android:layout_height="440dp"
         android:gravity="center_vertical"
         android:orientation="vertical"
-        android:padding="25dp">
+        android:padding="25dp">*
 
         <TextView
-            android:id="@+id/personalInformation"
-            android:layout_width="match_parent"
-            android:layout_height="42dp"
-            android:text="@string/personalInformation"
+            android:id="@+id/pressure"
+            android:layout_width="300dp"
+            android:layout_height="49dp"
+            android:inputType="number"
+            android:text="@string/pressure"
             android:textAlignment="center"
             android:textColor="@color/textColor"
             android:textSize="18dp" />
 
         <EditText
-            android:id="@+id/lastName"
+            android:id="@+id/upperPressure"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="@string/lastName"
+            android:hint="@string/upperPressure"
+            android:inputType="number"
             android:textColorHint="@color/textColorHint" />
 
         <EditText
-            android:id="@+id/middleName"
+            android:id="@+id/lowerPressure"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="@string/middleName"
+            android:hint="@string/lowerPressure"
+            android:inputType="number"
             android:textColorHint="@color/textColorHint" />
 
         <EditText
-            android:id="@+id/firstName"
+            android:id="@+id/pulse"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="@string/firstName"
+            android:hint="@string/pulse"
+            android:inputType="number"
             android:textColorHint="@color/textColorHint" />
 
         <EditText
-            android:id="@+id/age"
+            android:id="@+id/tachycardia"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="@string/age"
+            android:hint="@string/tachycardia"
+            android:inputType="number"
+            android:textColorHint="@color/textColorHint" />
+
+        <EditText
+            android:id="@+id/data"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/data"
+            android:inputType="number"
             android:textColorHint="@color/textColorHint" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"/>
-
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="380dp"
         android:layout_height="wrap_content"
@@ -94,53 +106,24 @@
             android:id="@+id/save"
             android:layout_width="147dp"
             android:layout_height="80dp"
-            android:layout_gravity="center"
             android:text="@string/save"
             android:textColor="@color/textColor" />
+
         <TextView
-            android:layout_width="48dp"
+            android:layout_width="20dp"
             android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/clean"
             android:layout_width="147dp"
             android:layout_height="80dp"
-            android:layout_gravity="center"
             android:text="@string/clean"
             android:textColor="@color/textColor" />
     </LinearLayout>
-        <LinearLayout
 
-            android:layout_width="380dp"
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <Button
-                android:id="@+id/pressure"
-                android:layout_width="147dp"
-                android:layout_height="80dp"
-                android:layout_gravity="start"
-                android:text="@string/pressure"
-                android:textColor="@color/textColor" />
-
-            <TextView
-                android:layout_width="48dp"
-                android:layout_height="wrap_content" />
-
-            <Button
-                android:id="@+id/vitals"
-                android:layout_width="147dp"
-                android:layout_height="80dp"
-                android:layout_gravity="end"
-                android:text="@string/vitals"
-                android:textColor="@color/textColor" />
-        </LinearLayout>
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="10dp"/>
-
+            android:textSize="8dp" />
     </LinearLayout>
