--- a/app/src/main/res/layout/activity_vitals_info.xml
+++ b/app/src/main/res/layout/activity_vitals_info.xml
@@ -26,64 +26,53 @@
             android:layout_width="315dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:textStyle="bold"
             android:text="@string/name"
-            android:textColor="@color/textColor" />
+            android:textAlignment="center"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
     <LinearLayout
 
-        android:layout_width="386dp"
-        android:layout_height="wrap_content"
+        android:layout_width="395dp"
+        android:layout_height="380dp"
         android:gravity="center_vertical"
         android:orientation="vertical"
         android:padding="25dp">
 
         <TextView
-            android:id="@+id/personalInformation"
-            android:layout_width="match_parent"
-            android:layout_height="42dp"
-            android:text="@string/personalInformation"
+            android:id="@+id/vitals"
+            android:layout_width="300dp"
+            android:layout_height="49dp"
+            android:text="@string/vitals"
             android:textAlignment="center"
             android:textColor="@color/textColor"
             android:textSize="18dp" />
 
         <EditText
-            android:id="@+id/lastName"
+            android:id="@+id/weight"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="@string/lastName"
+            android:hint="@string/weight"
+            android:inputType="number"
             android:textColorHint="@color/textColorHint" />
 
         <EditText
-            android:id="@+id/middleName"
+            android:id="@+id/steps"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="@string/middleName"
+            android:hint="@string/steps"
+            android:inputType="number"
             android:textColorHint="@color/textColorHint" />
 
-        <EditText
-            android:id="@+id/firstName"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/firstName"
-            android:textColorHint="@color/textColorHint" />
-
-        <EditText
-            android:id="@+id/age"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/age"
-            android:textColorHint="@color/textColorHint" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"/>
-
+            android:layout_width="343dp"
+            android:layout_height="50dp" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="380dp"
         android:layout_height="wrap_content"
@@ -94,53 +83,25 @@
             android:id="@+id/save"
             android:layout_width="147dp"
             android:layout_height="80dp"
-            android:layout_gravity="center"
             android:text="@string/save"
             android:textColor="@color/textColor" />
+
         <TextView
-            android:layout_width="48dp"
+            android:layout_width="20dp"
             android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/clean"
             android:layout_width="147dp"
             android:layout_height="80dp"
-            android:layout_gravity="center"
             android:text="@string/clean"
             android:textColor="@color/textColor" />
     </LinearLayout>
-        <LinearLayout
 
-            android:layout_width="380dp"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <Button
-                android:id="@+id/pressure"
-                android:layout_width="147dp"
-                android:layout_height="80dp"
-                android:layout_gravity="start"
-                android:text="@string/pressure"
-                android:textColor="@color/textColor" />
-
-            <TextView
-                android:layout_width="48dp"
-                android:layout_height="wrap_content" />
-
-            <Button
-                android:id="@+id/vitals"
-                android:layout_width="147dp"
-                android:layout_height="80dp"
-                android:layout_gravity="end"
-                android:text="@string/vitals"
-                android:textColor="@color/textColor" />
-        </LinearLayout>
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="10dp"/>
-
-    </LinearLayout>
+        android:layout_width="300dp"
+        android:layout_height="49dp"
+        android:textColor="@color/textColor"
+        android:textSize="12dp" />
+</LinearLayout>
