--- a/app/src/main/res/layout/start_window.xml
+++ b/app/src/main/res/layout/start_window.xml
@@ -26,11 +26,11 @@
             android:layout_width="315dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:textStyle="bold"
             android:text="@string/name"
-            android:textColor="@color/textColor" />
+            android:textAlignment="center"
+            android:textColor="@color/textColor"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -81,9 +81,10 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="30dp"/>
+            android:layout_height="30dp" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="380dp"
         android:layout_height="wrap_content"
@@ -97,6 +98,7 @@
             android:layout_gravity="center"
             android:text="@string/save"
             android:textColor="@color/textColor" />
+
         <TextView
             android:layout_width="48dp"
             android:layout_height="wrap_content" />
@@ -109,38 +111,40 @@
             android:text="@string/clean"
             android:textColor="@color/textColor" />
     </LinearLayout>
-        <LinearLayout
 
-            android:layout_width="380dp"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:padding="10dp">
+    <LinearLayout
 
-            <Button
-                android:id="@+id/pressure"
-                android:layout_width="147dp"
-                android:layout_height="80dp"
-                android:layout_gravity="start"
-                android:text="@string/pressure"
-                android:textColor="@color/textColor" />
+        android:layout_width="380dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:padding="10dp">
 
-            <TextView
-                android:layout_width="48dp"
-                android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/pressure"
+            android:layout_width="147dp"
+            android:layout_height="80dp"
+            android:layout_gravity="start"
+            android:text="@string/pressure"
+            android:textColor="@color/textColor" />
 
-            <Button
-                android:id="@+id/vitals"
-                android:layout_width="147dp"
-                android:layout_height="80dp"
-                android:layout_gravity="end"
-                android:text="@string/vitals"
-                android:textColor="@color/textColor" />
-        </LinearLayout>
+        <TextView
+            android:layout_width="48dp"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/vitals"
+            android:layout_width="147dp"
+            android:layout_height="80dp"
+            android:layout_gravity="end"
+            android:text="@string/vitals"
+            android:textColor="@color/textColor" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="10dp"/>
+        android:textSize="10dp" />
 
-    </LinearLayout>
+</LinearLayout>
